--- a/auto-value-parcel/build.gradle
+++ b/auto-value-parcel/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.12.1'
     testImplementation 'com.google.auto:auto-common:1.1.2'
     testImplementation 'com.google.testing.compile:compile-testing:0.19'
-    testImplementation files(Jvm.current().getToolsJar())
+//    testImplementation files(Jvm.current().getToolsJar())
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
